# bauduino

./: .gitignore  .gitmodules  Readme.md
arduino/: CMakeLists.txt  configure
arduino/libraries/ModbusSlave/: ModbusSlave.cpp  ModbusSlave.h
arduino/libraries/SimpleModbusSlave/: ModbusConstants.h  SimpleModbusSlave.cpp  SimpleModbusSlave.h
arduino/libraries/SimpleModbusSlave/examples/SimpleModbusSlaveArduino/: SimpleModbusSlaveArduino.ino
arduino/libraries/Util/: Util.cpp  Util.h
arduino/sketch/: CMakeLists.txt  sketch.cpp
web/: arduinoclient.py  modbusclient.py
